--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -11,19 +11,55 @@
   display: flex;
   input {
     width: 100%;
-    padding: 1rem 0;
+    // padding: 1rem 0; 
+    -webkit-appearance: none;
+    background: transparent;
+    cursor: pointer;
   }
   p {
-    padding: 1rem;
+    padding: 0 1rem;
   }
 }
+
+input[type="range"]:focus{
+  outline: none
+}
+
+input[type="range"]::-webkit-slider-thumb{ // thumb slider changes 
+  -webkit-appearance: none;
+  height: 16px;
+  width: 16px;
+  
+}
+
 .play-control {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
   width: 50%;
-  svg{
+  svg {
     cursor: pointer;
   }
+}
+
+.track{   //this div is the parent of animate-track class and we want these two class overlap, so parent: relative and child: absolute
+  background: lightblue;
+  width: 100%;
+  height: 1rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 1rem;
+} 
+
+.animate-track{
+  background: rgb(7, 151, 50);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(100%);
+  border-radius: 1rem;
+  pointer-events: none;
 }
