--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -1,34 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
 
-  @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Lexend:wght@300&display=swap");
 
-  @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Lexend:wght@300&display=swap');
+.song-container {
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
+  img {
+    width: 35%;
+    border-radius: 50%;
+  }
 
+  h2 {
+    padding: 1rem 1rem 1rem 1rem;
+    font-family: "Lato", sans-serif;
+    color: rgb(54, 54, 54);
+    font-weight: 900;
+    font-size: 2rem;
+  }
 
-.song-container{
-    min-height: 50vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-    img{
-        width: 35%;
-        border-radius: 50%;
+  h3 {
+    font-size: 1rem;
+    font-family: "Lexend", sans-serif;
+    color: rgb(54, 54, 54);
+  }
+}
+
+@media screen and (max-width: 768px) {    // making responsive for mobile devices view such as smart phone
+  .song-container {
+    img {
+      width: 60%;
     }
-
-    h2{
-        padding: 1rem 1rem 1rem 1rem;
-        font-family: 'Lato', sans-serif;
-        color: rgb(54,54,54);
-        font-weight: 900;
-        font-size: 2rem;
-    }
-
-    h3{
-        font-size: 1rem;
-        font-family: 'Lexend', sans-serif;  
-        color: rgb(54,54,54);
-  
-    }
+  }
 }
