--- a/src/styles/_songList.scss
+++ b/src/styles/_songList.scss
@@ -78,3 +78,12 @@
 .displayList{
     transform: translateX(-20vw);
 }
+
+@media screen and (max-width: 768px) {    // making responsive for mobile devices view such as smart phone
+    .song-list{
+        width: 100%;
+    }
+    .displayList{
+        transform: translateX(-100vw);  // find -100 by error testing!
+    }
+  }
